# temeco

./: .travis.yml  LICENSE  README.md  publish.sh  pyproject.toml
temeco/: interface.py  temeco.py
test/: test_temeco.py
