[tool.poetry]
name = "temeco"
version = "0.1.3"
description = "A small package handling telegram message copying preserving text entities"
authors = ["monomonedula <valh@tuta.io>"]
repository = "https://github.com/monomonedula/temeco"
homepage = "https://github.com/monomonedula/temeco"
keywords = ["telegram", "encoding", "telegram-bot-api", "utility"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^6.0.1"
pytest-cov = "^2.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
